--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
-# ignore these directories.
+# ignore these directories
 /.git
 /recipes
-/test
 
-# ignore generated files.
+# ignore generated files
 *.elc
 
-# ignore I use to not ignore.
-Update_Log.txt
-TODO(jenchieh).txt
+# eask packages
+.eask/
+dist/
+
+# packaging
+*-autoloads.el
+*-pkg.el
